--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.2",
+    "@types/redis": "^4.0.11",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "redis": "^4.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
